--- a/report/references.bib
+++ b/report/references.bib
@@ -27,16 +27,88 @@
 	year = {2017}
 }
 
-@misc{NTC_datasheet,
-	author = {EPCOS},
-	title = {NTC thermistors for temperature measurement},
-	howpublished = {\url{https://www.tme.eu/Document/7f93a3d121ea8402378cf8bc6239e8d2/B57164K104J-EPCOS-datasheet-10192.pdf}},
-	year = {2006}
-}
-
 @misc{ESP32_microcontroller,
 	author = {Alexander Maier,Yuriy Vagapov, Andrew Sharp},
 	title = {Comparative Analysis and Practical Implementation of the ESP32 Microcontroller Module for the Internet of Things - Scientific Figure on ResearchGate},
 	howpublished = {\url{https://www.researchgate.net/figure/Microcontroller-flowchart_fig5_320273388}},
 	year = {2006}
+}
+
+@misc{relay-datasheet,
+	author = {Songle},
+	title = {RELAY: JQC-3FF/012-1ZST},
+	howpublished = {\url{https://www.tme.eu/Document/311affc211749c2a4c93ad074af62b72/LEG-SERIES.pdf}},
+	year = {2019}
+}
+
+@misc{mcp-datasheet,
+	author = {Microchip Technology},
+	title = {MCP6001/2/4},
+	howpublished = {\url{https://www.microchip.com/wwwproducts/en/MCP6001}},
+	year = {2019}
+}
+
+@misc{bc547-datasheet,
+	author = {NPN Epitaxial Silicon Transistor},
+	title = {BC546},
+	howpublished = {\url{https://www.sparkfun.com/datasheets/Components/BC546.pdf}},
+	year = {2002}
+}
+https://moodle.fct.unl.pt/pluginfile.php/760583/mod_page/content/16/1DC103K-EC_DS.pdf
+@misc{NTC_datasheet,
+	author = {AMETHERM},
+	title = {NTC Thermistors},
+	howpublished = {\url{https://www.ametherm.com/inrush-current/ntc-thermistors}},
+	year = {2019}
+}
+Methods to Reduce Thermistor Linearization Error, Memory, and Power Requirements
+https://www.ti.com/lit/an/snoaa12/snoaa12.pdf?ts=1728893663123&ref_url=https%253A%252F%252Fwww.google.com%252F
+
+@misc{ntc-Linearisation,
+	author = {Texas Instruments},
+	title = {Methods to Reduce Thermistor Linearization Error, Memory, and Power Requirements},
+	howpublished = {\url{https://www.ti.com/lit/an/snoaa12/snoaa12.pdf?ts=1728893663123&ref_url=https%253A%252F%252Fwww.google.com%252F
+	                }},
+	year = {2004}
+}
+
+@article{steinhart-hart,
+	author = {Steinhart, John S. and Hart, Stanley R.},
+	title = {Calibration curves for thermistors},
+	journal = {Deep Sea Research and Oceanographic Abstracts},
+	volume = {15},
+	number = {4},
+	pages = {497--503},
+	year = {1968},
+	publisher = {Elsevier},
+	doi = {10.1016/0011-7471(68)90057-0}
+}
+
+@book{calibration-methods,
+	author = {Childs, Peter R. N.},
+	title = {Practical Temperature Measurement},
+	publisher = {Butterworth-Heinemann},
+	year = {2001},
+	pages = {139--141},
+	address = {Oxford, UK},
+	isbn = {9780750650811}
+}
+
+@inproceedings{9061500,
+	author = {Yershov, Roman and Voytenko, Volodymyr and Bychko, Volodymyr},
+	booktitle = {2019 IEEE International Scientific-Practical Conference Problems of Infocommunications, Science and Technology (PIC S\&T)},
+	title = {Software-Based Contact Debouncing Algorithm with Programmable Auto-Repeat Profile Feature},
+	year = {2019},
+	pages = {813-818},
+	keywords = {Contacts;Contactors;Transient analysis;Software;Shift registers;RLC circuits;bounce;debounce;debouncing;algorithm;finite-state machine;pointer to function;auto-repeat},
+	doi = {10.1109/PICST47496.2019.9061500}
+}
+
+@book{SensorSignalConditioning,
+	author = {Walt Kester and James Bryant and Walt Jung and Scott Wurcer and Chuck Kitchin},
+	title = {Sensor Signal Conditioning},
+	publisher = {Analog Devices, Inc.},
+	year = {1999},
+	note = {Chapter 4 of Op Amp Applications},
+	url = {https://www.analog.com/media/en/training-seminars/design-handbooks/Op-Amp-Applications/Sect4.PDF}
 }
